# DepthBatch

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  PLANS.md  README.md  README.zh-CN.md  pyproject.toml
.codex/: config.toml
.codex/agents/: README.md
.github/workflows/: ci.yml  release.yml
checksums/: depth_anything_v2_vits.sha256
docs/: architecture.md  deployment_notes.md  devlog.md  license_notes.md  quickstart.md  quickstart.zh-CN.md  reference_notes.md  release_notes_v0.1.0-alpha.md
examples/: fake_backend_smoke.py
scripts/: download_da_v2_small.py
src/depthbatch/: __init__.py  __main__.py  api.py  cli.py  config.py  constants.py  errors.py  types.py  utils.py
src/depthbatch/backends/: __init__.py  base.py  fake_backend.py  onnx_backend.py  pytorch_backend.py  transformers_backend.py
src/depthbatch/io/: __init__.py  artifacts.py  sources.py
src/depthbatch/manifests/: __init__.py  recorder.py
src/depthbatch/pipelines/: __init__.py  benchmark.py  common.py  export_onnx.py  infer_images.py  infer_onnx.py  infer_video.py  inspect.py
src/depthbatch/providers/: __init__.py
src/depthbatch/providers/depth_anything_v2/: __init__.py  presets.py  provider.py
src/depthbatch/providers/depth_anything_v2/_vendor/: __init__.py  dinov2.py  dpt.py
src/depthbatch/providers/depth_anything_v2/_vendor/dinov2_layers/: __init__.py  attention.py  block.py  drop_path.py  layer_scale.py  mlp.py  patch_embed.py  swiglu_ffn.py
src/depthbatch/providers/depth_anything_v2/_vendor/util/: __init__.py  blocks.py  transform.py
src/depthbatch/runtime/: __init__.py  environment.py  workspace.py
tests/: conftest.py  test_benchmark_and_inspect.py  test_cli.py  test_config.py  test_environment_and_docs.py  test_export_and_onnx.py  test_infer_images.py  test_infer_video.py  test_sources.py
tests/fixtures/images/: sample_a.ppm  sample_b.ppm
